--- a/style.css
+++ b/style.css
@@ -41,8 +41,11 @@ ul {
 }
 
 .hero-img {
-  height: 300px;
   width: 700px;
+  height: 300px;
+  object-fit: cover;
+  object-position: 25% 25%;
+  border-radius: 8px;
 }
 
 .hero-main-text {
